# wbs

./: .gitignore  README.md  config.json  config.json.example  main.py  pyproject.toml  wbs  wbs.db  wbs2.json
db/: schema.sql  wbs.db-shm  wbs.db-wal
doc/: NUMERICS  USERS
games/: README.md
logs/: README.md
plugins/: README.md
src/: __init__.py  bot.py  botcmds.py  botnet.py  channel.py  commands.py  console.py  core.py  db.py  irc.py  net.py  partyline.py  seen.py  session.py  types.py  update.py  user.py
