[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wbs"
version = "6.0.0"
description = "Python-based IRC bot with multiprocessing and botnet support (WBS)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "irc",
  "aiosqlite",
  "janus",
  "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]

[project.scripts]
wbs = "main:main"         # ./wbs entrypoint

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["src"]
